--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,6 +11,7 @@
 @import url('./container.css');
 @import url('./section.css');
 @import url('./animations.css');
+@import url('./loader.css');
 
 /* Sections style */
 @import url('./header.css');
