--- a/src/css/animations.css
+++ b/src/css/animations.css
@@ -56,3 +56,15 @@
     transform: translateY(0);
   }
 }
+
+@keyframes zoomIn {
+  0% {
+    transform: scale(0.5);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
