--- a/src/css/header.css
+++ b/src/css/header.css
@@ -8,6 +8,12 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.header__logo__wrapper {
+  display: flex;
+  align-items: center;
+}
+
 .logo {
   display: inline-flex;
   align-items: center;
