--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,10 +1,15 @@
 <header class="header">
   <div class="container header__container">
-    <a class="logo" href="./index.html" aria-label="Site logo">
-      <svg class="logo__icon" width="100" height="30">
-        <use href="{=$icon-path}"></use>
-      </svg>
-    </a>
+    <div class="header__logo__wrapper">
+      <a class="logo" href="./index.html" aria-label="Site logo">
+        <svg class="logo__icon" width="100" height="30">
+          <use href="{=$icon-path}"></use>
+        </svg>
+      </a>
+      <button class="theme-toggle-btn" type="button" aria-label="Toggle theme">
+        <span class="theme-toggle__icon"></span>
+      </button>
+    </div>
 
     <form class="search-form">
       <input
